contrib/byacc/test/yacc/err_syntax1.error
YACC: e - line 1 of "./err_syntax1.y", syntax error
	?%	{
	^
